# epmatools

./: .gitignore  .readthedocs.yml  CHANGELOG.md  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  codecov.yml  environment-dev.yml  environment.yml  pyproject.toml
.github/workflows/: ci.yml  pypi.yml  release.yml  testing.yml
doc/: api.rst  conf.py  index.rst
docs/: conf.py  intro.rst
empatools/: __init__.py  __main__.py  datatables.py  maps.py  minerals.py  plotting.py
epmatools/: __init__.py  datatables.py  io.py  maps.py  plotting.py
epmatools/data/maps/: ex1.h5
epmatools/data/oxides/: minerals.csv
notebooks/: demo.ipynb
src/: __init__.py  __main__.py  datatables.py  io.py  maps.py  minerals.py  plotting.py
src/data/maps/: ex1.h5
src/data/oxides/: avgpelite.csv  grt_profile.csv  pyroxenes.csv
tests/: conftest.py  test_cli.py  test_empatools.py  test_epmatools.py
