[project]
name = "epmatools"
dynamic = ["version"]
description = "Tools to manipulate EPMA analyses"
readme = "README.md"
maintainers = [{ name = "Ondrej Lexa", email = "lexa.ondrej@gmail.com" }]
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "matplotlib",
    "matplotlib-scalebar",
    "scipy",
    "h5py",
    "pandas",
    "Jinja2",
    "scikit-learn",
    "colorcet",
    "xlrd",
    "openpyxl",
    "periodictable",
]

[project.optional-dependencies]
extra = ["jupyterlab"]
tests = ["pytest", "pytest-cov", "nbval"]
docs = [
    "ipykernel",
    "nbsphinx",
    "nbsphinx-link",
    "sphinx",
    "sphinx_mdinclude",
    "sphinx_rtd_theme",
]
dev = ["epmatools[extra,tests,docs]", "black"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "epmatools/__init__.py"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests", "notebooks"]
